<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_create"
        android:icon="@drawable/ic_add_white_18dp"
        android:title="@string/item_create_title"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/menu"
        android:icon="@drawable/ic_more_vert_white_18dp"
        android:title="@string/item_create_title"
        app:showAsAction="ifRoom">

        <menu>
            <item
                android:id="@+id/menu_map"
                android:icon="@drawable/ic_map_white"
                android:title="@string/map_title" />

            <item
                android:id="@+id/menu_search"
                android:icon="@drawable/ic_search_white_24dp"
                android:title="@string/item_search_title" />
        </menu>

    </item>

</menu>