<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:padding="20dp"
    android:background="@color/light_grey">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/monthly_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:padding="10dp"
        android:text="@string/monthly_payment"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/monthly_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:padding="10dp"
        android:textColor="#000"
        app:layout_constraintStart_toEndOf="@+id/monthly_text"
        app:layout_constraintTop_toTopOf="@+id/monthly_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/total_payment"
        android:textColor="#000"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/monthly_text" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/total_payment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textColor="#000"
        app:layout_constraintStart_toEndOf="@+id/total_text"
        app:layout_constraintTop_toBottomOf="@+id/monthly_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dialogButtonConvert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/convertEuro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_text" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dialogButtonOK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/colorPrimary"
        android:text="@string/ok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialogButtonConvert" />


</androidx.constraintlayout.widget.ConstraintLayout>